# CrediSol

./: Anchor.toml  CONTRIBUTING.md  LICENSE  README.md  package.json  todo.txtx
app/configInit/: README.md  attestation_registry.ts  index.ts  loans_marketplace.ts  package.json  score_attestor.ts
client/: .env.example  .gitignore  README.md  middleware.ts  next.config.ts  package.json
client/app/: globals.css  layout.tsx  page.tsx  provider.tsx
client/hooks/: use-create-loan.ts  use-get-program.ts  use-loans.ts  use-post-score-attestation.ts  use-score-attestor.ts  use-user-loan.ts  use-user-role.ts
client/lib/: notify.ts  utils.ts
client/stores/: animation-store.ts  user-store.ts
programs/loans_marketplace/: Cargo.toml
programs/loans_marketplace/src/: context.rs  contexts.rs  error.rs  event.rs  lib.rs  mod.rs  state.rs
programs/loans_marketplace/src/instructions/: create_loan.rs  deposit_collateral.rs  drawdown.rs  finalize_funding.rs  initialize_config.rs  lender_fund.rs  mark_default.rs  mod.rs  payout_to_lenders.rs  repay_loan.rs  set_loan_for_default_testing.rs
programs/loans_marketplace/src/state/: config.rs  lender_share.rs  loan.rs  mod.rs  payout.rs
programs/score_attestor/: Cargo.toml
programs/score_attestor/src/: constants.rs  error.rs  event.rs  lib.rs  mod.rs  types.rs
programs/score_attestor/src/instructions/: admin.rs  admin_score.rs  init_config.rs  mod.rs  post_attestation.rs  post_scoreattestation.rs
programs/score_attestor/src/state/: attestation.rs  config.rs  mod.rs  scoreattestation.rs
tests/: credit-protocol.ts
(+89 files in other folders)
